# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: .~lock.sekvenssikaavio.odp#  arkkitehtuuri.md  kayttoohje.md  kayttoohje_pp.odp  pakkauskaavio.odp  sekvenssikaavio.odp  testaus.md  työaikakirjanpito.md  vaatimusmäärittely.md
RailwayDesigner/: README.md  pyproject.toml  tasks.py
RailwayDesigner/Dokumentaatio/: pakkauskaavio.odp  työaikakirjanpito.md  vaatimusmäärittely.md
RailwayDesigner/src/: location_loader.py  main_railway.py  map_maker.py  optimizer.py  user_interface.py
RailwayDesigner/src/data/: communities.csv  population.csv
RailwayDesigner/src/tests/: locloader_test.py  maploader_test.py  mapmaker_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: viikko3_ppt.odp
src/: .coverage  contest.py  index.py
src/UI/: user_interface.py
src/data/: population.csv
src/loaders/: location_loader.py  map_maker.py  report_maker.py
src/optimizers/: optimizer.py
src/tests/: locloader_test.py  mapmaker_test.py  optimizer_test.py  reportmaker_test.py
