[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["wathero <rolf.wathen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tk = "^0.1.0"
image = "^1.5.33"
pandas = "^1.3.4"
requests = "^2.26.0"
lxml = "^4.6.4"
invoke = "^1.6.0"
pylint = "^2.12.2"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
